fix z-index bug and change medal emoji to image

--- a/src/components/Nav.scss
+++ b/src/components/Nav.scss
@@ -65,7 +65,7 @@ $logo-color: #967155;
       left: 0;
       height: 0;
       width: 100%;
-      z-index: 1;
+      z-index: 2;
       &--visible {
         position: absolute;
         background-color: #eee;
