--- a/src/pages/statistics.scss
+++ b/src/pages/statistics.scss
@@ -44,10 +44,9 @@
 
       .StatisticsPage__medal {
         position: absolute;
-        font-size: 10rem;
         top: -10px;
         left: 50%;
-        margin-left: -5rem;
+        margin-left: -60px;
         z-index: 1;
       }
     }
